force-app/main/default/objects/Payroll_Input__c/Payroll_Input__c.object-meta.xml
<CustomObject>
    <label>Payroll Input</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Payroll Input Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>