force-app/main/default/objects/Payroll_Input__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Payroll Inputs</relationshipLabel>
    <relationshipName>Payroll_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>