force-app/main/default/objects/Payroll_Input__c/fields/Final_Settlement_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Final_Settlement_Indicator__c</fullName>
    <label>Final Settlement Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>