force-app/main/default/objects/Payroll_Input__c/fields/Overtime_Hours_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours_Amount__c</fullName>
    <label>Overtime Hours/Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>