force-app/main/default/objects/Payroll_Input__c/fields/Payroll_Month__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Month__c</fullName>
    <label>Payroll Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>