force-app/main/default/objects/Payroll_Input__c/fields/Unpaid_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Leave_Days__c</fullName>
    <label>Unpaid Leave Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>